Fix typos and improve clarity in notebook text

--- a/Notebooks/Syratel Churn Prediction.ipynb
+++ b/Notebooks/Syratel Churn Prediction.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## Objective\n",
     "\n",
-    "To Build a classification model to predict whether a customer will soon stop doing business with **SyriaTel**, and then translate the results into actionable business insights for customer retention.\n"
+    "To build a classification model to predict whether a customer will soon stop doing business with **SyriaTel**, and then translate the results into actionable business insights for customer retention.\n"
    ]
   },
   {
@@ -23,11 +23,11 @@
    "metadata": {},
    "source": [
     "## Introduction \n",
-    "Customer's leave a bussiness (Churn) happens when customers stop using a companys services. For a telecomunications like SyriaTel, churn leads to revenue loss and increased costs because acquring new  customers is more expensive than retaining existing ones.\n",
+    "Customer (Churn) happens when customers stop using a company's services. For a telecommunications company like SyriaTel, churn leads to revenue loss and increased costs because acquring new  customers is more expensive than retaining existing ones.\n",
     "\n",
     "In this project, I developed a Machine learning classification model That predicts  whether a customer is likely to soon leave **SyriaTel** \n",
     "\n",
-    "I Analyzed the data and created visualisations inorder  to understand why customers are leaving and provided business recommendations aimed at reducing churn and improving customer retention. "
+    "I analyzed the data and created visualisations inorder  to understand why customers are leaving and provided business recommendations aimed at reducing churn and improving customer retention. "
    ]
   },
   {
